[package]
name = "guessing_game"
version = "0.1.0"
authors = ["freebz <freebz@hananet.net>"]
description = "컴퓨터가 선택한 숫자를 맞히는 게임"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.6.1"
